--- a/Bandroid/app/build.gradle
+++ b/Bandroid/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.example.android.miwok"
+        applicationId "com.example.android.Bandroid"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
